[tool.poetry]
name = "repl_python3_Algebra-2-Sine-Game"
version = "0.1.0"
description = ""
authors = ["PianoPenguin471 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
